src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <inlineHelpText>Only business address should be entered against a contact</inlineHelpText>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Language_Address_1__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Language_Address_2__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alt_Language_City__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Language_Postal_Code__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Language_country__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Central_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to be used to capture if a contact has been centrally blocked. By default this field will be unchecked.</description>
        <label>Central Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when a contact needs to be deactivated.</description>
        <label>Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reason__c</fullName>
        <description>Field to capture contact deactivation reason.</description>
        <label>Deactivation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved to new company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPS_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to identify whether contact is enabled for Intel Premier Support</description>
        <label>IPS Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPS_Login_ID__c</fullName>
        <description>Field to capture login id of contact for Intel Premier Support.</description>
        <label>IPS Login ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <description>This field will capture information on job role of contact.</description>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator / clerical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Support Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer System Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education- Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - College Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Head of ITC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education- State Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education- Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of School Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health- Nurses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Physician &amp; Surgeon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health - Support Occupation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Technologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health community Workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Safety Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_First_Name__c</fullName>
        <description>This field to be used to get inputs on Local Name of contact (if any)</description>
        <label>Local First Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Last_Name__c</fullName>
        <description>This field to be used to get inputs on Local Name of contact (if any).</description>
        <label>Local Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Id__c</fullName>
        <description>Field to capture login Ids of contact.</description>
        <label>Login Id</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication__c</fullName>
        <label>Preferred Communication</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face to Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post (Letter)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_External_ID__c</fullName>
        <description>Temporary field added to support initial load</description>
        <externalId>true</externalId>
        <label>Temp External ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Do_Not_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Do_Not_Contact</fullName>
        <active>true</active>
        <description>If Do Not Contact flag is selected</description>
        <label>Do Not Contact - rec</label>
    </recordTypes>
</CustomObject>